fdo#54264: Fix multi-argument ApplicationEvent::TYPE_OPEN/PRINT

...that had been broken when 5c22a03320f20ae9ac2c3c16025e7c5e3a7915d5> "Cleaned
up CommandLineArgs" changed the representation of those multi-arguments from a
single string with \n delimiters to vector<string> in
desktop/soruce/app/cmdlineargs.hxx, but missed updating other producers of
such ApplicationEvents.

(cherry picked from commit 787940e0ac285aa1101ca8964d252faaab3ea8c1, plus
04f4d4bfb708ef477618fa47d5f17779f4e4cf3c "Add TODO comment expressing doubts
about existing code")
Conflicts:
	sfx2/source/appl/appdde.cxx

Change-Id: I527d620c60a87f3a01d970927c521163fb6df192